<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Kenneth Thieu Nanodegree Projects</string>
    <string name="PopularMovies">Popular Movies</string>
    <string name="Scores">FootBall Scores App</string>
    <string name="Library">Library App</string>
    <string name="Build_It_Bigger">Build It Bigger</string>
    <string name="XYZ_Reader">XYZ Reader</string>
    <string name="Capstone">Capstone Project</string>
</resources>
